# task-manager-api

./: .env.example  README.md  SOLUTION.md  docker-compose.yml  inspect_db.py  pyproject.toml  restClient.http
frontend/: biome.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: ErrorBoundary.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useDebounce.js  useNotifications.js  useTasks.js  useUsers.js
frontend/src/pages/: DashboardPage.jsx  ErrorPage.jsx  LoginPage.jsx  LoginPage.test.jsx  SettingsPage.jsx  TasksPage.jsx
frontend/src/schemas/: auth.schema.js  comment.schema.js  task.schema.js
frontend/src/services/: auth.service.js  notification.service.js  task.service.js  user.service.js
src/: __init__.py  main.py
src/api/: dependencies.py
src/core/: __init__.py  config.py  logging_config.py  security.py  security_middleware.py
src/db/: __init__.py  activity_logs.py  base.py  comments.py  notifications.py  tasks.py  user_roles.py  users.py
src/schemas/: __init__.py  activity_log.py  auth.py  comment.py  notification.py  task.py  user.py
src/scripts/: seed_db.py
src/services/: __init__.py  auth_service.py  notification_service.py  task_service.py
tests/: __init__.py  conftest.py  test_auth.py  test_auth_additional.py  test_comments_history.py  test_notifications.py  test_notifications_additional.py  test_security_utils.py  test_tasks.py  test_tasks_access.py  test_users_api.py
(+15 files in other folders)
